--- a/unitTests/pom.xml
+++ b/unitTests/pom.xml
@@ -6,6 +6,26 @@
 	<artifactId>unitTests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+    <build>
+	    <testSourceDirectory>src</testSourceDirectory>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.mave.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <version>2.18.1</version>
+	            <configuration>
+	                <threadCount>2</threadCount>
+	                <parallel>all</parallel>
+	            </configuration>
+	        </plugin>
+	    </plugins>
+    </build>
+
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
