--- a/maratona-dd/pom.xml
+++ b/maratona-dd/pom.xml
@@ -20,6 +20,19 @@
             <version>8.0.27</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
