--- a/maratona-dd/pom.xml
+++ b/maratona-dd/pom.xml
@@ -33,6 +33,13 @@
             <version>2.14.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
