--- a/unitTests/pom.xml
+++ b/unitTests/pom.xml
@@ -10,7 +10,7 @@
 	    <testSourceDirectory>src</testSourceDirectory>
 	    <plugins>
 	        <plugin>
-	            <groupId>org.apache.mave.plugins</groupId>
+	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-surefire-plugin</artifactId>
 	            <version>2.18.1</version>
 	            <configuration>
