--- a/fundamentos/.classpath
+++ b/fundamentos/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-13.0.2">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-11.0.12">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -28,5 +28,8 @@
 	<classpathentry kind="lib" path="lib/hibernate-5.4.15.Final/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate-5.4.15.Final/stax-ex-1.8.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate-5.4.15.Final/txw2-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/javax.activation-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/mail-1.5.0-b01.jar"/>
+	<classpathentry kind="lib" path="lib/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
