--- a/maratona-jsf/src/main/webapp/WEB-INF/web.xml
+++ b/maratona-jsf/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,8 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
+  <context-param>
+    <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+    <param-value>true</param-value>
+  </context-param>
 </web-app>
