--- a/maratona-jsf/pom.xml
+++ b/maratona-jsf/pom.xml
@@ -28,7 +28,11 @@
 		    <version>8.0</version>
 		    <scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
