--- a/maratona-jsf/src/main/webapp/WEB-INF/web.xml
+++ b/maratona-jsf/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
   <welcome-file-list>
-  	<welcome-file>index.xhtml</welcome-file>
+  	<welcome-file>request.xhtml</welcome-file>
   </welcome-file-list>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
