[maratona-jsf] - Escopos: SessionScoped

--- a/maratona-jsf/src/main/webapp/WEB-INF/web.xml
+++ b/maratona-jsf/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
   <welcome-file-list>
-  	<welcome-file>request.xhtml</welcome-file>
+  	<welcome-file>session.xhtml</welcome-file>
   </welcome-file-list>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
@@ -17,4 +17,7 @@
     <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
     <param-value>true</param-value>
   </context-param>
+  <session-config>
+    <session-timeout>20</session-timeout>
+  </session-config>
 </web-app>
